--- a/RSA/index.html
+++ b/RSA/index.html
@@ -4,10 +4,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>RSA</title>
 
 		<link rel="stylesheet" href="../reveal.js/css/reveal.css">
-		<link rel="stylesheet" href="../reveal.js/css/theme/blood.css" id="theme">
+		<link rel="stylesheet" href="../reveal.js/css/theme/moon.css" id="theme">
 		<link rel="stylesheet" href="../reveal.js/user/custom.css">
 
 		<!-- Theme used for syntax highlighting of code -->
